Relatório em equipe, prática 1

--- a/Algoritmos de Ordenação e Busca.ipynb
+++ b/Algoritmos de Ordenação e Busca.ipynb
@@ -728,11 +728,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "3. Rode o Bubble Sort melhorado versão 2, 10000 vezes, em que cada rodada deve ser gerado um vetor aleatório, de tamanho 1000. Para cada rodada, armazene o tempo de execução em uma tabela. Compare os tempos de execução. São sempre iguais? Se existe diferença, qual o motivo para essa variação?\n"
+   ]
   }
  ],
  "metadata": {
