--- a/Algoritmos de Ordenação e Busca.ipynb
+++ b/Algoritmos de Ordenação e Busca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -48,7 +48,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,13 +239,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entre com o número de elementos de X: 5\n",
+      "Digite o 1°: 3\n",
+      "Digite o 2°: 8\n",
+      "Digite o 3°: 9\n",
+      "Digite o 4°: 5\n",
+      "Digite o 5°: 7\n",
+      "O vetor de entrada é:  \n",
+      "[3, 8, 9, 5, 7]\n",
+      "O vetor ordenado é: \n",
+      "[3, 5, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Entre com o número de elementos de X: \"))\n",
     "\n",
@@ -280,17 +297,23 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
+    "'''\n",
+    "\n",
     "for k in range(1, n+1):\n",
-    "    for i in range(0, n-1):    \n",
+    "\n",
+    "    for i in range(0, n-1):\n",
+    "    \n",
     "        if(X[i] > X[i+1]):\n",
-    "            X[i], X[i+1] = X[i+1], X[i]"
+    "        \n",
+    "            X[i], X[i+1] = X[i+1], X[i]\n",
+    "'''"
    ]
   },
   {
@@ -503,17 +526,24 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
+    "'''\n",
+    "\n",
     "for j in range(1, n):\n",
+    "\n",
     "    for i in range(n-1, j-1, -1):\n",
+    "    \n",
     "        if X[i] < X[i-1]:\n",
-    "            X[i], X[i-1] = X[i-1], X[i]"
+    "        \n",
+    "            X[i], X[i-1] = X[i-1], X[i]\n",
+    "            \n",
+    "'''"
    ]
   },
   {
